src/styles/globals.css
@import 'tailwindcss';

@plugin "@tailwindcss/typography";

@plugin 'daisyui' {
    themes:
        nord --default,
        dracula;
}

@custom-variant dark (&:where([data-theme=dracula], [data-theme=dracula] *));

@layer base {
    * {
        @apply select-none;
    }
}

@layer components {
    .is-editor-empty:first-child::before {
        @apply pointer-events-none float-left h-0 text-[#adb5bd] content-[attr(data-placeholder)];
    }
}

@theme {
    --animate-rotate1: rotate1 1.15s linear infinite;
    --animate-rotate2: rotate2 1.15s 0.1s linear infinite;
    --animate-rotate3: rotate3 1.15s 0.15s linear infinite;

    @keyframes rotate1 {
        0% {
            transform: rotateX(45deg) rotateY(-45deg) rotateZ(0deg);
        }
        100% {
            transform: rotateX(45deg) rotateY(-45deg) rotateZ(360deg);
        }
    }

    @keyframes rotate2 {
        0% {
            transform: rotateX(45deg) rotateY(45deg) rotateZ(0deg);
        }
        100% {
            transform: rotateX(45deg) rotateY(45deg) rotateZ(360deg);
        }
    }

    @keyframes rotate3 {
        0% {
            transform: rotateX(-60deg) rotateY(0deg) rotateZ(0deg);
        }
        100% {
            transform: rotateX(-60deg) rotateY(0deg) rotateZ(360deg);
        }
    }
}

